# DBus_Permission_Manager

./: .clang-format  .gitignore  README.md
app/: main.cpp
app/services/com.system.permissions/include/: permission_service.h
app/services/com.system.time/: CMakeLists.txt
app/services/com.system.time/src/: main.cpp
client/: CMakeLists.txt  client.cpp
services/com.system.permissions/: CMakeLists.txt  permissions-bindings.xml  permissions_server.cpp  sdbus-c++-xml2cpp
services/com.system.permissions/include/: permission-proxy-glue.h  permission-server-glue.h  permission_service.h
services/com.system.permissions/src/: main.cpp  permission_service.cpp
services/com.system.time/: CMakeLists.txt  time-bindings.xml  time-server-glue.h  time_server.cpp
services/com.system.time/include/: time-server-glue.h  time_service.h
services/com.system.time/src/: main.cpp  time_service.cpp
